[package]
name = "cife-rs"
version = "0.1.0"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "dippe"
harness = false

[dependencies]
anyhow = "1.0"
rand = "0.7"
thiserror = "1.0"
rabe-bn = "0.4"

[features]
default = ["dippe"]
dippe = []

[dev-dependencies]
criterion = "0.3"
