[package]
name = "cife-rs"
version = "0.1.0"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "dippe"
harness = false

[dependencies]
anyhow = "1.0"
bitvec = "0.20"
rand = "0.7"
thiserror = "1.0"
sha2 = "0.9"
rabe-bn = { version = "0.4", features = ["hash-to-curve"], git = "https://github.com/rubdos/rabe-bn/", branch = "hash-to-curve" }

[features]
default = ["dippe"]
dippe = []

[dev-dependencies]
criterion = "0.3"
